# Devops-CA2-Group12

./: .all-contributorsrc  .gitignore  Contributors.md  Dockerfile  FIREBASE_SETUP.md  Jenkinsfile  Makefile  README.md  app.js  data_preprocessing_and_cleaning.ipynb  devops-ca1-ssst.ipynb  docker-compose.yml  feature_engineering.py  h origin main --force  index.html  load_data.py  package-lock.json  package.json  postcss.config.js  predict.py  preprocess.py  requirements.txt  submission.csv  submissionDEVOPS.csv  submit.py  test_small.csv  train_and_test.py  train_model.py  train_small.csv  vite.config.js
CA(217,010,043,056)/: .dockerignore  .gitignore  Dockerfile  README.md  docker-build.sh  docker-compose.yml  pyproject.toml  requests.bash  run.py
CA(217,010,043,056)/app/: main.py
CA(217,010,043,056)/app/api/: routes.py
CA(217,010,043,056)/app/core/: config.py  directories.py  security.py
CA(217,010,043,056)/app/models/: requests.py
CA(217,010,043,056)/app/services/: cache_manager.py  copilot_provider.py  document_processor.py  embedding_manager.py  enhanced_answer_generator.py  file_manager.py  lru_cache_manager.py  openai_provider.py  persistent_cache.py  question_logger.py  rag_coordinator.py  text_chunker.py  vector_store.py
CA(217,010,043,056)/app/services/extractors/: __init__.py  base_extractor.py  excel_extractor.py  file_type_detector.py  image_extractor.py  pdf_extractor.py  powerpoint_extractor.py  text_extractor.py  word_extractor.py
CA(217,010,043,056)/app/utils/: debug.py
CA(217,010,043,056)/scripts/: download_all_models.py
RAG/: r.txt  (+10 more)
(+177 files in other folders)
