[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.15",
    "fastapi>=0.116.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pymupdf>=1.26.3",
    "python-multipart>=0.0.20",
    "torch>=2.7.1",
    "uvicorn[standard]>=0.35.0",
    "flagembedding>=1.2.11",
    "tiktoken>=0.8.0",
    "faiss-cpu>=1.7.4",
    "sentence-transformers>=2.2.2",
    "httpx>=0.28.1",
    "pytesseract>=0.3.13",
    "pdfplumber>=0.11.7",
    "tqdm>=4.67.1",
    "docling>=2.7.0",
    "easyocr>=1.7.2",
    "opencv-python>=4.12.0.88",
    "pymupdf4llm>=0.0.27",
    "rapidocr-onnxruntime>=1.4.4",
    "paddleocr>=3.1.0",
    "openpyxl>=3.1.0",
    "xlrd>=2.0.1",
    "python-docx>=1.1.0",
    "docx2txt>=0.8",
    "python-pptx>=0.6.21",
    "python-magic>=0.4.27",
    "pandas>=2.0.0",
]
